--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,20 +1,20 @@
 blank_issues_enabled: false
 contact_links:
   - name: Website
-    url: https://blissos.io
+    url: https://blissos.org
     about: 'Bliss OS Website'
   - name: Documentation
-    url: https://docs.blissos.io
+    url: https://docs.blissos.org
     about: 'Bliss OS Documentation'
   - name: Knowledgebase
-    url: https://knowledgebase.blissos.io
+    url: https://knowledgebase.blissos.org
     about: 'Bliss OS Knowledgebase'
   - name: Help
-    url: https://blissos.io/discord
+    url: https://blissos.org/discord
     about: 'If you need further assistance, join our Discord server.'
   - name: Documentation issue
-    url: https://github.com/BlissOS/docs
+    url: https://github.com/BlissRoms-x86/docs
     about: 'For documentation issues, report it and/or suggest changes on our documentation repository.'
   - name: Knowledgebase issue
-    url: https://github.com/BlissOS/knowledgebase
+    url: https://github.com/BlissRoms-x86/knowledgebase
     about: 'For knowledgebase issues, report it and/or suggest changes on our knowledgebase repository.'
